5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1828_1646.log
== TEST (2019-06-12 15:14:39) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
		print(c)
v = zeros(4,dtype=int)
e=0
for i in range(size(x)):
	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
File "XXXX", line 22
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:49) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
	print(c)
v = zeros(4,dtype=int)
e=0
for i in range(size(x)):
	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
File "XXXX", line 22
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:04) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
	print(c)

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:14) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
	print(c)

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:08) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=v[i] + 1
	print(v)
		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:13) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=v[i] + 1
print(v)
		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:54) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=e
		e = e +1
	print(v)

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:13) 
-- CODE:
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=e
		e = e +1
	print(v)

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:26) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=e
		e = e +1
	print(v)

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:29) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=e
		e = e +1
	print(e)

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:01) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[i]=v[i] +1
		e = e +1
	print(v)

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:58) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]= v[i]+v[i]
	print(v)
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:19) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=x[i]
	print(v)
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:00) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
	print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:40:17) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
	print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- EXECUTION TIME:
1.19148
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
[0 0]
[0 0]
[0 0]
[0 0]
[0 0]
[0 5]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
[]
[]
[]
[]
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
[0]
[0]
[0]
[0]
[0]
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:26) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
	print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:41:12) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=1
		e = e+1
	print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:02) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
	print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:36) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:42:53) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- EXECUTION TIME:
1.11358
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
[0 5]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:56) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:05) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
print(c)
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:44:10) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
c=0
for i in range(size(x)):
	if (x[i]<=50):
		c = c+1
print(c)
v = zeros(c,dtype=int)
e=0
for i in range(size(x)):
	if(x[i]<=50):
		v[e]=i
		e = e+1
print(v)
	
		
		
	
		
	

		

		
	

	

	
	
	

	
	
	
	
	
		
		
	
-- EXECUTION TIME:
1.14779
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
2
[0 5]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
0
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
